Update menu images with actual restaurant photos

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Sección Menú -->
     <section id="menu">
         <h2>Menú Principal</h2>
-        <img src="https://via.placeholder.com/800x400" alt="Imagen del menú">
+        <img src="http://cantinachichilo.com.ar/IMG_20181013_130822_125.jpg" alt="Imagen del menú">
         <p>Prueba nuestros platos tradicionales italianos con un toque único de Buenos Aires.</p>
     </section>
 
@@ -36,7 +36,7 @@
             <li>Ranas a la Provenzal</li>
             <li>Caracoles a la Bordalesa</li>
         </ul>
-        <img src="https://via.placeholder.com/400x300" alt="Plato principal">
+        <img src="http://cantinachichilo.com.ar/CHICHOLINA%20POSTRE.jpg" alt="Plato principal">
     </section>
 
     <!-- Sección Horarios -->
